feat: added new lits and functionality
